<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/ScreenBackground"
    tools:context=".ui.detail.DetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivDetailCharacter"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDetailName" />


        <TextView
            android:id="@+id/tvDetailName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/detail_fragment_character_name"
            style="@style/TextColor"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </TextView>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ivDetailCharacter"
            app:layout_constraintTop_toTopOf="@+id/ivDetailCharacter">

            <ImageView
                android:id="@+id/ivDetailAlive"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_marginTop="7dp">

            </ImageView>

            <TextView
                android:id="@+id/tvDetailStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/detail_fragment_character_status"
                style="@style/TextColor"
                android:textColor="@color/white"
                android:textSize="16sp">

            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/detail_fragment_character_"
                style="@style/TextColor"
                android:textColor="@color/white"
                android:textSize="16sp">

            </TextView>

            <TextView
                android:id="@+id/tvDetailSpecies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/detail_fragment_character_species"
                style="@style/TextColor"
                android:textColor="@color/white"
                android:textSize="16sp">

            </TextView>
        </LinearLayout>

        <TextView
            android:id="@+id/tvDetailGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/detail_fragment_character_gender"
            style="@style/TextColor"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout"
            app:layout_constraintStart_toStartOf="@+id/linearLayout"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        </TextView>

        <TextView
            android:id="@+id/tvDetailLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/detail_fragment_character_location"
            android:textColor="@color/white"
            android:textSize="16sp"
            style="@style/TextColor"
            app:layout_constraintEnd_toEndOf="@+id/tvDetailGender"
            app:layout_constraintStart_toStartOf="@+id/tvDetailGender"
            app:layout_constraintTop_toBottomOf="@+id/tvDetailGender">

        </TextView>


        <TextView
            android:id="@+id/tvDetailEpisodes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="20dp"
            android:layout_marginTop="48dp"
            android:text="@string/detail_fragment_episodes_tv"
            style="@style/TextColor"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivDetailCharacter">

        </TextView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvEpisodes"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDetailEpisodes" />


        <ImageButton
            android:id="@+id/btnFavEmpty"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/baseline_favorite_border_24"
            android:backgroundTint="@color/pp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/ivHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/baseline_arrow_back_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>